backend/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mobilispect-api
  name: mobilispect-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mobilispect-api
  template:
    metadata:
      labels:
        app: mobilispect-api
    spec:
      containers:
        - image: us-east4-docker.pkg.dev/refined-area-380401/mobilispect/mobilispect-api:0.0.4
          name: mobilispect-api
          volumeMounts:
            - name: config-volume
              mountPath: /workspace/config
          resources: { }
      volumes:
        - name: config-volume
          configMap:
            name: mobilispect-api
